add objects to POST methods, create static resources, minor refactoring
