# express-api/public/api-spec/halp_api_openapi_3.1.yaml
@@ -26,7 +26,11 @@ paths:
                             $ref: "#/components/schemas/UserCreateRequestSchema"
             responses:
                 "201":
-                    $ref: "#/components/responses/DefaultSuccessResponse"
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/UserSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -141,7 +145,11 @@ paths:
                             $ref: "#/components/schemas/TeamCreateRequestSchema"
             responses:
                 "201":
-                    $ref: "#/components/responses/DefaultSuccessResponse"
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/TeamSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
         get:
@@ -227,8 +235,11 @@ paths:
                             $ref: "#/components/schemas/EventCreateRequestSchema"
             responses:
                 "201":
-                    $ref: "#/components/responses/DefaultSuccessResponse"
-                    # TODO replace with actual object
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/EventSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -283,8 +294,7 @@ paths:
                             $ref: "#/components/schemas/JobCreateRequestSchema"
             responses:
                 "201":
-                    $ref: "#/components/responses/DefaultSuccessResponse"
-                    # TODO replace with actual object
+                    $ref: "#/components/responses/JobSchema"
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
 
@@ -382,7 +392,6 @@ paths:
             responses:
                 "201":
                     $ref: "#/components/responses/DefaultSuccessResponse"
-                    # TODO replace with actual object
                 "default":
                     $ref: "#/components/responses/DefaultErrorResponse"
         delete:
@@ -430,6 +439,8 @@ components:
             required: true
             schema:
                 type: string
+
+    # TODO standardize paths:
 
     responses:
         DefaultSuccessResponse:
@@ -503,19 +514,13 @@ components:
             properties:
                 name:
                     type: string
-                description:
-                    type: string
                 dateTime:
                     type: number
-                jobs:
-                    type: array
-                    minItems: 1
-                    items:
-                        $ref: "#/components/schemas/JobCreatorSchema"
+                description:
+                    type: string
             required:
                 - name
                 - dateTime
-                - jobs
         JobCreateRequestSchema:
             type: object
             properties:
@@ -628,6 +633,10 @@ components:
                     type: string
                 name:
                     type: string
+            required:
+                - id
+                - adminId
+                - name
         EventSchema:
             type: object
             properties:
@@ -641,8 +650,11 @@ components:
                     type: string
                 startDatetime:
                     type: number
-                complete:
-                    type: boolean
+            required:
+                - id
+                - teamId
+                - name
+                - startDatetime
         EventEnrichedSchema:
             type: object
             properties:
@@ -656,8 +668,6 @@ components:
                     type: string
                 startDatetime:
                     type: number
-                complete:
-                    type: boolean
                 isVolunteering:
                     type: boolean
                 isAssigned:
@@ -668,7 +678,6 @@ components:
                 - name
                 - description
                 - startDatetime
-                - complete
                 - isVolunteering
                 - isAdmin
         EventDetailedSchema:
@@ -706,6 +715,21 @@ components:
             required:
                 - jobName
                 - count
+        JobSchema:
+            type: object
+            properties:
+                id:
+                    type: string
+                eventId:
+                    type: string
+                type:
+                    type: string
+                assigneeId:
+                    type: string
+            required:
+                - id
+                - eventId
+                - type
         JobEnrichedSchema:
             type: object
             properties:
