# express-api/src/main/api/routes/api-utils.ts
@@ -11,3 +11,16 @@ export function errorJson(message: string) {
 }
 
 export type RequestUserEnriched = { userId: string };
+
+export const MESSAGE_SERVER_ERROR = 'An unknown server error has occurred.'
+
+export const PATHS = {
+    index: '/',
+    static: '/static',
+    auth: '/auth',
+    users: '/users',
+    teams: '/teams',
+    teamId: '/:teamId',
+    events: '/events',
+    eventId: '/:eventId'
+}
